# ops

./: .gitignore  .ops.toml  .tool-versions  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  backlog.config.yml  cliff.toml  cog.toml  commit-groups.sh  deny.toml  dist-workspace.toml  release-plz.toml
.backlog/completed/: task-0001 - Box-leak-for-dynamic-command-strings-is-intentional-but-undocumented-lifetime.md  task-0003 - CommandOutput-missing-Debug-derive.md  (+488 more)
.cargo/: audit.toml  config.toml
crates/cli/: Cargo.toml
crates/cli/src/: about_cmd.rs  args.rs  extension_cmd.rs  help.rs  hook_shared.rs  init_cmd.rs  main.rs  new_command_cmd.rs  pre_commit_cmd.rs  pre_hook_cmd.rs  registry.rs  row.rs  run_before_commit_cmd.rs  run_before_push_cmd.rs  run_cmd.rs  subcommands.rs  test_utils.rs  theme_cmd.rs  tools_cmd.rs  tty.rs
crates/cli/src/registry/: discovery.rs  mod.rs  registration.rs  tests.rs
crates/cli/src/run_cmd/: dry_run.rs  plan.rs  tests.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: .default.ansible.ops.toml  .default.go.ops.toml  .default.java-gradle.ops.toml  .default.java-maven.ops.toml  .default.node.ops.toml  .default.ops.toml  .default.python.ops.toml  .default.rust.ops.toml  .default.terraform.ops.toml  AGENTS.md  expand.rs  lib.rs  output.rs  paths.rs  project_identity.rs  serde_defaults.rs  stack.rs  style.rs  subprocess.rs  sync.rs  table.rs  test_utils.rs  text.rs  ui.rs
crates/core/src/config/: commands.rs  edit.rs  loader.rs  merge.rs  mod.rs  overlay.rs  tests.rs  theme_types.rs  tools.rs
crates/core/src/config/loader/: conf_d.rs  env.rs  global.rs  mod.rs
crates/core/src/config/tests/: merge_tests.rs  mod.rs  serde_tests.rs  template_tests.rs  validate_tests.rs
crates/core/src/project_identity/: card.rs  format.rs  tests.rs
crates/core/src/stack/: detect.rs  metadata.rs  mod.rs
crates/core/src/subprocess/: cap.rs  drain.rs  mod.rs
crates/extension/: Cargo.toml
crates/extension/src/: data.rs  error.rs  extension.rs  lib.rs  macros.rs  tests.rs
crates/runner/: Cargo.toml
crates/runner/src/: display.rs  lib.rs  terminal.rs  test_support.rs
crates/runner/src/command/: abort.rs  build.rs  events.rs  exec.rs  mod.rs  parallel.rs  resolve.rs  results.rs  secret_patterns.rs  sequential.rs  tests.rs
crates/runner/src/command/tests/: build_cmd.rs  data.rs  events.rs  exec.rs  expand.rs  mod.rs  parallel.rs  parallel_infra.rs  raw_mode.rs  secrets.rs  sequential.rs
crates/runner/src/display/: error_detail.rs  finalize.rs  progress_state.rs  render_config.rs  style.rs  tap.rs  tests.rs
crates/theme/: Cargo.toml
crates/theme/proptest-regressions/: style.txt
crates/theme/src/: configurable.rs  lib.rs  render.rs  resolve.rs  step_line_theme.rs  style.rs  tests.rs
crates/theme/src/style/: sgr.rs  strip.rs
crates/theme/src/tests/: boxed_layout.rs  deserialize.rs  edge_case_width.rs  error_block_color.rs  format_duration.rs  left_pad.rs  mod.rs  render_basics.rs  render_summary.rs  resolve.rs  unicode.rs
docs/: command-mappings.md  components.md  data-collection-plan.md  extensions.md  releasing.md
extensions-go/about/: Cargo.toml
extensions-go/about/src/: go_mod.rs  go_syntax.rs  go_work.rs  lib.rs  modules.rs
extensions-java/about/: Cargo.toml
extensions-java/about/src/: gradle.rs  lib.rs  maven.rs
extensions-java/about/src/gradle/: lexer.rs  mod.rs  tests.rs
extensions-java/about/src/maven/: mod.rs  pom.rs
extensions-rust/about/: Cargo.toml
extensions-rust/about/src/: cards.rs  coverage_provider.rs  dashboard.rs  deps_provider.rs  format.rs  identity.rs  lib.rs  pages.rs  query.rs  text_util.rs  units.rs
extensions-rust/about/src/identity/: metrics.rs  mod.rs  resolver.rs
extensions-rust/cargo-toml/: Cargo.toml
extensions-rust/cargo-toml/src/: inheritance.rs  lib.rs  tests.rs  types.rs
extensions-rust/cargo-toml/src/tests/: extension.rs  find_root.rs  inheritance.rs  parse_edge.rs  provider.rs  types.rs
extensions-rust/cargo-update/: Cargo.toml
extensions-rust/cargo-update/src/: lib.rs  tests.rs
extensions-rust/metadata/: Cargo.toml
extensions-rust/metadata/src/: ingestor.rs  lib.rs  tests.rs  types.rs  views.rs
extensions-rust/test-coverage/: Cargo.toml
extensions-rust/test-coverage/src/: ingestor.rs  lib.rs  tests.rs  views.rs
extensions-rust/tools/: Cargo.toml
extensions-rust/tools/src/: install.rs  lib.rs  probe.rs  tests.rs  timeout.rs
extensions-rust/tools/src/probe/: cargo.rs  mod.rs  path.rs  rustup.rs  timeout.rs
extensions-terraform/plan/: Cargo.toml
extensions-terraform/plan/src/: lib.rs  model.rs  render.rs
extensions-terraform/plan/tests/fixtures/: empty.json  minimal.json  replace.json  unknown.json
extensions/about/: Cargo.toml
extensions/about/src/: cards.rs  code.rs  coverage.rs  deps.rs  identity.rs  lib.rs  lru.rs  manifest_cache.rs  manifest_io.rs  providers.rs  test_support.rs  text_util.rs  units.rs  workspace.rs
extensions/duckdb/: Cargo.toml
extensions/duckdb/src/: connection.rs  error.rs  ingestor.rs  lib.rs  schema.rs  sql.rs
extensions/duckdb/src/sql/: ingest.rs  mod.rs  query.rs  validation.rs
extensions/duckdb/src/sql/ingest/: dir.rs  mod.rs  orchestrator.rs  sidecar.rs  sql.rs
extensions/duckdb/src/sql/query/: coverage.rs  deps.rs  helpers.rs  loc.rs  mod.rs  tests.rs
extensions/git/: Cargo.toml
extensions/git/src/: config.rs  lib.rs  provider.rs  remote.rs
extensions/hook-common/: Cargo.toml
extensions/hook-common/src/: config.rs  fixtures.rs  git.rs  git_state.rs  install.rs  lib.rs  paths.rs  test_helpers.rs
extensions/run-before-commit/: Cargo.toml
extensions/run-before-commit/src/: lib.rs
extensions/run-before-push/: Cargo.toml
extensions/run-before-push/src/: lib.rs
extensions/tokei/: Cargo.toml
extensions/tokei/src/: ingestor.rs  lib.rs  tests.rs  views.rs
src/: .default.ops.toml  data_cmd.rs  display.rs  extension.rs  extension_cmd.rs  main.rs  output.rs  serde_defaults.rs  stack.rs  style.rs  test_utils.rs  theme_cmd.rs
tests/: integration.rs
(+1502 files in other folders)
