[workspace]
members = ["crates/*", "extensions/*", "extensions-rust/*"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
ops-core = { path = "crates/core" }
ops-extension = { path = "crates/extension" }
ops-theme = { path = "crates/theme" }
ops-runner = { path = "crates/runner" }
ops-duckdb = { path = "extensions/duckdb" }
ops-tokei = { path = "extensions/tokei" }
ops-about = { path = "extensions-rust/about" }
ops-cargo-toml = { path = "extensions-rust/cargo-toml" }
ops-cargo-update = { path = "extensions-rust/cargo-update" }
ops-deps = { path = "extensions-rust/deps" }
ops-metadata = { path = "extensions-rust/metadata" }
ops-tools = { path = "extensions-rust/tools" }
ops-pre-commit = { path = "extensions/pre-commit" }
ops-test-coverage = { path = "extensions-rust/test-coverage" }
linkme = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "sync", "io-util", "time"] }
libc = "0.2"

[patch.crates-io]
# RUSTSEC-2026-0037: patch quinn-proto to 0.11.14 (DoS fix)
quinn-proto = { git = "https://github.com/quinn-rs/quinn", rev = "quinn-proto-0.11.14" }

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
