[package]
name = "ops"
version.workspace = true
edition.workspace = true
description = "Batteries-included task runner for any stack"
repository = "https://github.com/rsvalerio/ops"
homepage = "https://github.com/rsvalerio/ops"
license.workspace = true

[features]
default = []
duckdb = ["dep:ops-duckdb", "ops-extension/duckdb"]
stack-rust = ["dep:ops-about", "dep:ops-cargo-toml", "dep:ops-cargo-update", "dep:ops-metadata", "dep:ops-tools", "duckdb"]
stack-node = []
stack-go = []
stack-python = []
stack-terraform = []
stack-ansible = []
tokei = ["dep:ops-tokei", "duckdb"]
coverage = ["dep:ops-test-coverage", "duckdb"]

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
ops-runner = { workspace = true }
ops-tools = { workspace = true, optional = true }
ops-duckdb = { workspace = true, optional = true }
ops-tokei = { workspace = true, optional = true }
ops-about = { workspace = true, optional = true }
ops-cargo-toml = { workspace = true, optional = true }
ops-cargo-update = { workspace = true, optional = true }
ops-metadata = { workspace = true, optional = true }
ops-test-coverage = { workspace = true, optional = true }
ops-pre-commit = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
inquire = "0.9"
anyhow = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
toml_edit = "0.25"
toml = "1"
tokio = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
ops-runner = { workspace = true, features = ["test-support"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[[bin]]
name = "ops"
path = "src/main.rs"
