[package]
name = "ops"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = []
duckdb = ["dep:ops-duckdb", "ops-extension/duckdb", "ops-about/duckdb"]
stack-rust = ["dep:ops-about-rust", "dep:ops-cargo-toml", "dep:ops-cargo-update", "dep:ops-deps", "dep:ops-metadata", "dep:ops-tools", "duckdb"]
stack-node = []
stack-go = ["dep:ops-about-go"]
stack-python = ["dep:ops-about-python"]
stack-terraform = []
stack-ansible = []
stack-java-maven = ["dep:ops-about-java"]
stack-java-gradle = ["dep:ops-about-java"]
tokei = ["dep:ops-tokei", "duckdb"]
coverage = ["dep:ops-test-coverage", "duckdb"]

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
ops-runner = { workspace = true }
ops-tools = { workspace = true, optional = true }
ops-duckdb = { workspace = true, optional = true }
ops-tokei = { workspace = true, optional = true }
ops-about = { workspace = true }
ops-git = { workspace = true }
ops-about-rust = { workspace = true, optional = true }
ops-about-go = { workspace = true, optional = true }
ops-about-java = { workspace = true, optional = true }
ops-about-python = { workspace = true, optional = true }
ops-cargo-toml = { workspace = true, optional = true }
ops-cargo-update = { workspace = true, optional = true }
ops-deps = { workspace = true, optional = true }
ops-metadata = { workspace = true, optional = true }
ops-test-coverage = { workspace = true, optional = true }
ops-run-before-commit = { workspace = true }
ops-run-before-push = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
inquire = "0.9"
anyhow = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
toml_edit = "0.25"
toml = "1"
tokio = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
ops-runner = { workspace = true, features = ["test-support"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[[bin]]
name = "ops"
path = "src/main.rs"
