[package]
name = "ops"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = []
duckdb = ["dep:ops-duckdb", "ops-extension/duckdb", "ops-about/duckdb"]
stack-rust = ["dep:ops-about-rust", "dep:ops-cargo-toml", "dep:ops-cargo-update", "dep:ops-deps", "dep:ops-metadata", "dep:ops-tools", "duckdb"]
stack-node = ["dep:ops-about-node"]
stack-go = ["dep:ops-about-go"]
stack-python = ["dep:ops-about-python"]
stack-terraform = []
stack-ansible = []
stack-java-maven = ["dep:ops-about-java"]
stack-java-gradle = ["dep:ops-about-java"]
tokei = ["dep:ops-tokei", "duckdb"]
coverage = ["dep:ops-test-coverage", "duckdb"]

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
ops-runner = { workspace = true }
ops-tools = { workspace = true, optional = true }
ops-duckdb = { workspace = true, optional = true }
ops-tokei = { workspace = true, optional = true }
ops-about = { workspace = true }
ops-git = { workspace = true }
ops-about-rust = { workspace = true, optional = true }
ops-about-go = { workspace = true, optional = true }
ops-about-node = { workspace = true, optional = true }
ops-about-java = { workspace = true, optional = true }
ops-about-python = { workspace = true, optional = true }
ops-cargo-toml = { workspace = true, optional = true }
ops-cargo-update = { workspace = true, optional = true }
ops-deps = { workspace = true, optional = true }
ops-metadata = { workspace = true, optional = true }
ops-test-coverage = { workspace = true, optional = true }
ops-run-before-commit = { workspace = true }
ops-run-before-push = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
inquire = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
toml_edit = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
shlex = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
ops-runner = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }

[[bin]]
name = "ops"
path = "src/main.rs"
