[package]
name = "ops-core"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
serde = { workspace = true }
toml = "1"
config = "0.15"
anyhow = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
strum = { version = "0.28", features = ["derive"] }
comfy-table = "7"
unicode-width = "0.2"
terminal_size = "0.4"

[dev-dependencies]
tempfile = "3"
proptest = "1"
serial_test = "3"
