[package]
name = "ops-core"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
config = "0.15"
anyhow = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
strum = { version = "0.28", features = ["derive"] }
comfy-table = "7"
unicode-width = { workspace = true }
terminal_size = "0.4"
shellexpand = { version = "3.1.2", default-features = false, features = ["base-0"] }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tracing-subscriber = { workspace = true }
