[package]
name = "ops-core"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
config = "0.15"
anyhow = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
strum = { version = "0.28", features = ["derive"] }
comfy-table = { workspace = true }
unicode-width = { workspace = true }
terminal_size = { workspace = true }
shellexpand = { workspace = true }
wait-timeout = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tracing-subscriber = { workspace = true }
