[package]
name = "cargo-ops-extension"
version.workspace = true
edition.workspace = true

[features]
duckdb = []
test-support = ["cargo-ops-core/test-support"]

[dependencies]
cargo-ops-core = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
bitflags = "2"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
