[package]
name = "ops-extension"
publish = false
version.workspace = true
edition.workspace = true

[features]
duckdb = []
test-support = ["ops-core/test-support"]

[dependencies]
ops-core = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
bitflags = "2"

[dev-dependencies]
tempfile = "3"
