[package]
name = "ops-runner"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = ["ops-core/test-support"]

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
ops-theme = { workspace = true }
tokio = { workspace = true }
indicatif = "0.18"
indexmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
ops-runner = { path = ".", features = ["test-support"] }
tempfile = "3"
proptest = "1"
tokio = { workspace = true }
