[package]
name = "ops-runner"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-support = ["ops-core/test-support"]

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
ops-theme = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
indexmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
ops-runner = { path = ".", features = ["test-support"] }
tempfile = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
