[package]
name = "ops-theme"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
ops-core = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
tempfile = "3"
toml = "1"
