[package]
name = "ops-theme"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
serial_test = "3"
tempfile = { workspace = true }
toml = "1"
