[package]
name = "ops-theme"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
ops-core = { workspace = true, features = ["test-support"] }
proptest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
