[package]
name = "ops-about-go"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
linkme = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
tempfile = "3"
