[package]
name = "ops-about-java"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
ops-about = { workspace = true }
ops-git = { workspace = true }
linkme = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
