[package]
name = "cargo-ops-about"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
cargo-ops-core = { workspace = true }
cargo-ops-extension = { workspace = true, features = ["duckdb"] }
cargo-ops-duckdb = { workspace = true }
cargo-ops-cargo-toml = { workspace = true }
cargo-ops-cargo-update = { workspace = true }
duckdb = "1.4"
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
unicode-width = "0.2"
indicatif = "0.18"
toml = "1"

[dev-dependencies]
cargo-ops-extension = { workspace = true, features = ["test-support"] }
tempfile = "3"
