[package]
name = "ops-about-rust"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true, features = ["duckdb"] }
ops-about = { workspace = true, features = ["duckdb"] }
linkme = { workspace = true }
ops-duckdb = { workspace = true }
ops-cargo-toml = { workspace = true }
ops-tools = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
toml = "1"

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
linkme = { workspace = true }
tempfile = "3"
