[package]
name = "ops-cargo-toml"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
linkme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
linkme = { workspace = true }
tempfile = { workspace = true }
