[package]
name = "cargo-ops-metadata"
version.workspace = true
edition.workspace = true

[dependencies]
cargo-ops-core = { workspace = true }
cargo-ops-extension = { workspace = true, features = ["duckdb"] }
cargo-ops-duckdb = { workspace = true }
duckdb = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
cargo-ops-extension = { workspace = true, features = ["test-support"] }
tempfile = "3"
