[package]
name = "ops-metadata"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true, features = ["duckdb"] }
ops-duckdb = { workspace = true }
duckdb = "1.4"
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
tempfile = "3"
