[package]
name = "ops-metadata"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true, features = ["duckdb"] }
linkme = { workspace = true }
ops-duckdb = { workspace = true }
duckdb = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
ops-duckdb = { workspace = true, features = ["test-helpers"] }
linkme = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
