[package]
name = "ops-tools"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
linkme = { workspace = true }
indexmap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
wait-timeout = "0.2"

[dev-dependencies]
toml = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
