[package]
name = "ops-tfplan"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
terminal_size = { workspace = true }
shellexpand = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
