[package]
name = "ops-about"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
duckdb = ["dep:ops-duckdb", "ops-extension/duckdb"]
# DUP-3 / TASK-0985: shared `assert_debug_escapes_control_chars` helper for
# the ERR-7 sweep regression tests in the about extensions. Enabled only by
# dev-dependencies; production code never sees it.
test-support = []

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true }
ops-git = { workspace = true }
ops-duckdb = { workspace = true, optional = true }
linkme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
