[package]
name = "ops-duckdb"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true, features = ["duckdb"] }
duckdb = { version = "1.10501", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
