[package]
name = "ops-duckdb"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-core = { workspace = true }
ops-extension = { workspace = true, features = ["duckdb"] }
linkme = { workspace = true }
duckdb = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[features]
default = []
# Exposes test-only helpers (e.g., the test_create_sql_validation macro) for use
# in dev-dependencies of downstream crates. Not part of the stable API.
test-helpers = []

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
