[package]
name = "ops-hook-common"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ops-core = { workspace = true }
toml_edit = "0.25"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
# Exposes `test_helpers` (e.g. `EnvGuard`) so wrapper crates can reuse the
# same env-mutation guard from their own #[cfg(test)] modules without
# duplicating the implementation.
test-helpers = []
