[package]
name = "ops-hook-common"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ops-core = { workspace = true }
# SEC-25 / TASK-1210: randomised temp-file paths for atomic-rename hook
# upgrades — concurrent installs against shared worktrees must not collide
# on a fixed sibling name (`.<hook>.ops-tmp`) and clobber each other's
# mid-write payload.
tempfile = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Exposes `test_helpers` (e.g. `EnvGuard`) so wrapper crates can reuse the
# same env-mutation guard from their own #[cfg(test)] modules without
# duplicating the implementation.
test-helpers = []
