[package]
name = "ops-run-before-commit"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-extension = { workspace = true }
ops-hook-common = { workspace = true }
linkme = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
