[package]
name = "ops-run-before-push"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-extension = { workspace = true }
ops-hook-common = { workspace = true }
linkme = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
ops-hook-common = { workspace = true, features = ["test-helpers"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
