[package]
name = "cargo-ops-tokei"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
cargo-ops-core = { workspace = true }
cargo-ops-extension = { workspace = true, features = ["duckdb"] }
cargo-ops-duckdb = { workspace = true }
duckdb = "1.4"
tokei = "14.0"
serde_json = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
cargo-ops-extension = { workspace = true, features = ["test-support"] }
tempfile = "3"
