[package]
name = "ops-tokei"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-extension = { workspace = true, features = ["duckdb"] }
ops-duckdb = { workspace = true }
duckdb = "1.10500"
tokei = "14.0"
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
tempfile = "3"
