[package]
name = "ops-tokei"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ops-extension = { workspace = true, features = ["duckdb"] }
linkme = { workspace = true }
ops-duckdb = { workspace = true }
duckdb = { workspace = true }
tokei = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
ops-extension = { workspace = true, features = ["test-support"] }
ops-duckdb = { workspace = true, features = ["test-helpers"] }
linkme = { workspace = true }
tempfile = { workspace = true }
